Revise a post & relocate attachments

--- a/_posts/2016-02-02-8percent.markdown
+++ b/_posts/2016-02-02-8percent.markdown
@@ -32,7 +32,7 @@ author:
 매달 원리금이 상환된다.
 
 <div class="image-caption">
-  <img src="/attachments/2016/8percent-workflow.png" alt="8퍼센트 대출 실행 과정"/>
+  <img src="/attachments/2016/8percent/workflow.png" alt="8퍼센트 대출 실행 과정"/>
   <div>8퍼센트 웹사이트에서 갈무리 한 이미지</div>
 </div>
 
@@ -60,10 +60,7 @@ author:
 점점 줄어들면서 원금이 차지하는 비중이 늘어나는 것을 볼 수 있다. 실제 입금액이
 이와 다른 것은 세금 때문이다.
 
-<div class="image-caption">
-  <img src="/attachments/2016/8percent-payments.png" alt="8퍼센트 상환"/>
-  <div>8퍼센트 웹사이트에서 갈무리 한 이미지</div>
-</div>
+<img src="/attachments/2016/8percent/payments.png" alt="8퍼센트 상환"/>
 
 그리고 만기일시상환 조건이 아닌 이상 이자 금액의 총합이 공시된 이자율보다
 적어보일 수 있다. 예를 들어서, 100,000원을 연 10%로 12개월동안 원리금균등상환
@@ -118,7 +115,7 @@ author:
 이상일 경우엔 안심펀드가 아무 소용이 없는건가...?)
 
 <div class="image-caption">
-  <img src="/attachments/2016/8percent-insurance.png" alt="안심펀드"/>
+  <img src="/attachments/2016/8percent/insurance.png" alt="안심펀드"/>
   <div><a href="https://8percent.kr/safe_fund/">8퍼센트 웹사이트</a>에서 갈무리 한 이미지</div>
 </div>
 
@@ -197,7 +194,7 @@ author:
 상환 목적으로 8퍼센트에서 돈을 빌려놓고 기존의 대출을 상환하지 않는 부정행위를
 방지할 수 있는 절차나 제도 같은 것 말이다.
 
-투자를 시작한지 9개월이 지난 지금, 아직까지 내가 투자했던 채권에서는 연체나
+투자를 시작한지 10개월이 지난 지금, 아직까지 내가 투자했던 채권에서는 연체나
 부도가 발생하지 않았다. 상환이 완료된 채권도 다섯개나 된다. 8퍼센트 전체적으로
 봤을 때에는 부도는 아직 발생하지 않았고, 연체는 총 8건이 발생했다.[^statistics]
 
@@ -218,13 +215,28 @@ obligation; CDO) 매니저와 대화를 나누면서 CDO와 그 파생상품이 
 살펴볼 필요가 있다는 생각이 든다. 실사(實査)는 중요하다.
 
 <div class="image-caption">
-  <img src="/attachments/2016/the-big-short.jpg" alt="The Big Short"/>
+  <img src="/attachments/2016/8percent/the-big-short.jpg" alt="The Big Short"/>
   <div>
     <a href="https://nerdgeist.com/2016/01/27/the-big-short-2015-film-review/">
       The Big Short (2015) Film Review by NERDGEISTGUESTWRITERDONAL
     </a>
   </div>
 </div>
+
+
+### 앞으로의 계획 ###
+
+일단 8퍼센트에서 제시한 예측불량률이 정확하다는 충분한 확신이 생기면,
+예측불량률과 기타 수치화 가능한 지표들을 토대로 적절한 분산투자 수익률 분석
+모델을 만들어볼 계획이다.
+
+<img src="/attachments/2016/8percent/default-rate.png" alt="8퍼센트 예측불량률"/>
+
+<!--
+어니스트 펀드의 [포트폴리오 채권 투자
+상품](https://www.honest-fund.com/products/portfolio/3)처럼 여러가지 채권을
+묶어서 제공해도 좋을 것 같다.
+-->
 
 
 아쉬운 점
