--- a/_posts/2016-02-02-8percent.markdown
+++ b/_posts/2016-02-02-8percent.markdown
@@ -232,6 +232,11 @@ obligation; CDO) 매니저와 대화를 나누면서 CDO와 그 파생상품이 
 
 <img src="/attachments/2016/8percent/default-rate.png" alt="8퍼센트 예측불량률"/>
 
+투자하는 채권의 개수가 많아지면 지금처럼 사람들이 어떤 목적으로 돈을
+빌려가는지, 상환이 어려워질만한 요인은 없는지 하나하나 수동으로 분석하는 일은
+불가능해진다. 개별 채권의 위험을 신뢰도 있게 분석하는 모델이 필요하며, 보유한
+채권의 일부가 부도 나더라도 기대 수익률을 맞출 수 있도록 운영되어야 한다.
+
 <!--
 어니스트 펀드의 [포트폴리오 채권 투자
 상품](https://www.honest-fund.com/products/portfolio/3)처럼 여러가지 채권을
@@ -247,9 +252,8 @@ obligation; CDO) 매니저와 대화를 나누면서 CDO와 그 파생상품이 
 예금, 주식, 채권, 펀드, 외화 등 다른 금융자산과는 다르게 환매가 어렵다는 단점이
 있다. 예전에는 환매가 원천적으로 불가능했지만, 최근에
 [서울채권거래소](http://sbx.or.kr/)라는 서비스가 생겨서 이 문제는 점진적으로
-해소가 될 것으로 보인다. 하지만 아직까지는 매물이 많지 않은 것으로 보아
-아직까지는 정기 예금이나 펀드처럼 원하는 시점에 자유롭게 환매하는 것은 어려울
-것으로 예상된다.
+해소가 될 것으로 보인다. 하지만 아직까지는 매물이 많지 않은 것으로 보아 정기
+예금이나 펀드처럼 원하는 시점에 자유롭게 환매하는 것은 어려울 것으로 예상된다.
 
 또한, 예금이나 주식과는 다르게 8퍼센트 채권은 담보로 인정받을 수 없다는
 문제점도 있다. 예를 들어서, 대부분의 돈을 예금 계좌에 넣어 두었는데 급하게
@@ -277,9 +281,9 @@ obligation; CDO) 매니저와 대화를 나누면서 CDO와 그 파생상품이 
 API 를 통한 다양한 상호작용까지는 아니더라도, 나의 투자 내역이라던가 예치금
 거래 내역 등 데이터라도 받아올 수 있는 방법이 있었으면 좋겠는데 그러한 것도
 보이지 않는다. 데이터를 CSV (혹은 다른 적당한 형식)으로 내려받을 수 있도록
-해달라고 요청해볼 생각이다. 이것마저 안 된다면 투자 금액 대비 관리 비용이 너무
-커져서 일정 금액 이상은 투자하기 어려울 것 같다. 장부를 전부 수동으로 작성할
-수는 없다.
+해달라고 요청해볼 생각이다. 이것마저 안 된다면 투자 규모가 커짐에 따라 관리
+비용이 너무 커져서 일정 금액 이상은 투자하기 어려울 것 같다. 장부를 전부
+수동으로 작성할 수는 없다.
 
 몇달 전에는 채권 공시 시간인 오후 1시만 되면 사람들이 구름같이 몰려와서
 웹사이트가 먹통이 되는 현상이 종종 발생했었는데, 이 글을 쓰는 지금(2016년
