Redirect to philosophical.one

--- a/_posts/2007-02-11-base62.markdown
+++ b/_posts/2007-02-11-base62.markdown
@@ -20,6 +20,8 @@ author:
   last_name: Byeon
 redirect_from:
   - /archives/558/
+redirect_to:
+  - http://philosophical.one/post/base62
 ---
 필요하신 분은 가져다 쓰세요.
 
