--- a/_posts/2016-02-02-8percent.markdown
+++ b/_posts/2016-02-02-8percent.markdown
@@ -11,6 +11,8 @@ author:
   email: suminb@gmail.com
   first_name: Sumin
   last_name: Byeon
+redirect_to:
+  - http://philosophical.one/post/8percent
 ---
 오랫동안 묵혀두었던 글을 이제서야 다시 꺼내서 쓴다. 글을 최초로 작성했던 시점과
 비교하여 [8퍼센트](http://8percent.kr)의 서비스가 달라진 부분이 많아서 꽤 많은
