--- a/_posts/2007-06-19-php-timer.markdown
+++ b/_posts/2007-06-19-php-timer.markdown
@@ -21,6 +21,8 @@ author:
   last_name: Byeon
 redirect_from:
   - /archives/659/
+redirect_to:
+  - http://philosophical.one/post/php-timer
 ---
 ## Introduction
 
